--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,31 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // navigation
+    def nav_version = "2.3.5"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    //timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // live data
+    def ver_lifecycle = "2.3.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$ver_lifecycle"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$ver_lifecycle"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$ver_lifecycle"
+
+    //Glide
+    implementation ("com.github.bumptech.glide:glide:4.11.0") {
+        exclude group: "com.android.support"
+    }
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-fragment:26.1.0'
+
+    // RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
