--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     // navigation
     def nav_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-com.sgs.devcamp2.flametalk_android.ui.ui-ktx:$nav_version"
 
     //timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
