--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FlameTalk_Android">
         <activity
+            android:name=".ui.oauth.OAuthActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.oauth.fbauth"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
