--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.sgs.devcamp2.flametalk_android">
 
     <application
+        android:name=".HiltActivity"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,20 +12,20 @@
         android:theme="@style/Theme.FlameTalk_Android">
         <activity
             android:name=".ui.oauth.OAuthActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.oauth.fbauth"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.FlameTalk_Android.NoActionBar">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FlameTalk_Android.NoActionBar">
+
         </activity>
     </application>
 
