--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
         classpath 'com.google.gms:google-services:4.3.10'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+
     }
 }
 
