--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'com.google.gms.google-services'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -42,6 +43,7 @@ android {
         enableExperimentalClasspathAggregation = true
     }
 
+
 }
 
 dependencies {
@@ -50,6 +52,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -80,14 +83,8 @@ dependencies {
 
 
     //firebase
-    // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:29.0.2')
-
-    // Declare the dependency for the Firebase Authentication library
-    // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
-
-    // Also declare the dependency for the Google Play services library and specify its version
     implementation 'com.google.android.gms:play-services-auth:20.0.0'
 
 
@@ -102,5 +99,23 @@ dependencies {
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha03'
     // When using Java.
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha03'
+
+
+    //Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+
+
+
+    //retrofit
+    //okhttp3
+     implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 }
 
