--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.moshi:moshi:1.13.0'
     //Retrofit 라이브러리 응답으로 가짜 객체를 만들기 위해
     implementation 'com.squareup.retrofit2:retrofit-mock:2.6.2'
 
