Add: additional user info
additional user info 추가 생성

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'kotlin-parcelize'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlinx-serialization'
+
 }
 
 android {
@@ -79,7 +81,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.moshi:moshi:1.13.0'
+    implementation 'com.squareup.moshi:moshi:1.12.0' //  1.13.0버전 bug Records requires ASM8
     //Retrofit 라이브러리 응답으로 가짜 객체를 만들기 위해
     implementation 'com.squareup.retrofit2:retrofit-mock:2.6.2'
 
@@ -131,8 +133,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation 'com.google.android.gms:play-services-auth:20.0.0'
 
-    //stomp
-    implementation 'com.github.NaikSoftware:StompProtocolAndroid:1.6.6'
+    //stomp krossbow
+    implementation("org.hildan.krossbow:krossbow-websocket-okhttp:3.1.1")
+    implementation("org.hildan.krossbow:krossbow-stomp-core:3.1.1")
+    implementation("org.hildan.krossbow:krossbow-stomp-kxserialization:3.1.1")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2")
+
 
 }
 
