--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FlameTalk_Android">
+        android:theme="@style/Theme.FlameTalk_Android"
+        android:usesCleartextTraffic="true"
+        >
 
 
         <activity
