add: create chat and get chatList with Room & useCase & repository Pattern & hilt
채팅방 생성 및 가져오기
room & useCase & repository 패턴 , hilt 적용

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$ver_lifecycle"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$ver_lifecycle"
     implementation "androidx.lifecycle:lifecycle-service:$ver_lifecycle"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha03"
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
