--- a/app/build.gradle
+++ b/app/build.gradle
@@ -170,4 +170,7 @@ dependencies {
     kapt("androidx.room:room-compiler:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
 
+    //jwt decoder
+    implementation 'com.auth0.android:jwtdecode:2.0.1'
+
 }
