--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,4 +173,8 @@ dependencies {
     //jwt decoder
     implementation 'com.auth0.android:jwtdecode:2.0.1'
 
+    //workmanager
+    implementation("androidx.work:work-runtime-ktx:2.7.1")
+    implementation 'androidx.hilt:hilt-work:1.0.0-alpha01'
+
 }
