Add: WebSocketConnection throw Exception
webSocketConnection 예외 처리

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -177,4 +177,8 @@ dependencies {
     implementation("androidx.work:work-runtime-ktx:2.7.1")
     implementation 'androidx.hilt:hilt-work:1.0.0-alpha01'
 
+    //test
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.3.1'
+    
+
 }
