--- a/app/build.gradle
+++ b/app/build.gradle
@@ -179,6 +179,7 @@ dependencies {
 
     //test
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.3.1'
-    
+    testImplementation 'org.mockito:mockito-core:2.10.0'
+    testImplementation 'android.arch.core:core-testing:1.1.0'
 
 }
