Add: testCode & handle api exception
testcode작성 및 api exception 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,11 @@ android {
     hilt{
         enableExperimentalClasspathAggregation = true
     }
-
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 
 }
 
@@ -177,6 +181,20 @@ dependencies {
     implementation("androidx.work:work-runtime-ktx:2.7.1")
     implementation 'androidx.hilt:hilt-work:1.0.0-alpha01'
 
-    
+    //test
+    testImplementation 'junit:junit:4.13'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
+    testImplementation "com.google.truth:truth:1.0.1"
+    testImplementation 'androidx.test.ext:junit:1.1.2'
+    testImplementation "org.robolectric:robolectric:4.4"
+
+
+    androidTestImplementation "junit:junit:4.13"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
+    androidTestImplementation "com.google.truth:truth:1.0.1"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 }
