--- a/app/build.gradle
+++ b/app/build.gradle
@@ -197,4 +197,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //Facebook shimmer library
+    implementation "com.facebook.shimmer:shimmer:0.5.0"
 }
